# OpenKnow

./: .env  .gitignore  README.md  config.json  config.yaml  main.py  mcp_server.py  pyproject.toml
.cursor/: mcp.json
src/: chunker.py  config.py  embedder.py  logging_config.py  parser.py  searcher.py  store.py
